fixed layout issues

--- a/src/App.scss
+++ b/src/App.scss
@@ -246,7 +246,7 @@ $bp-small: 37.5em;
           border-radius: 0.5rem;
           // box-shadow: 40px 30px 10px 10px rgb(69, 243, 39, 0.5);
           @media only screen and (max-width: $bp-medium) {
-            width: 15rem;
+            width: 18rem;
             height: 15rem;
             // box-shadow: 10px 10px 10px 3px rgb(69, 243, 39, 0.5);
           }
